# flatagents

./: .gitignore  AGENTS.md  LICENSE  MACHINES.md  PLAN_FLATMACHINES_FLATAGENTS_INDEPENDENT_ARCH.md  PLAN_REFACTOR_FLATMACHINES_PACKAGE_EXTRACTION.md  PLAN_SPLIT_FLATMACHINES_ARCH_OFF.md  PLAN_SPLIT_FLATMACHINES_ARCH_OFF_ANALYSIS.md  README.md  SDK_COMMON_SPEC_PLAN.md  flatagent.d.ts  flatagents-runtime.d.ts  flatmachine.d.ts  llm-build-guide.md  profiles.d.ts
examples/python/rlm/: README.md  pyproject.toml
examples/python/rlm/config/: explorer.yml  processor.yml  profiles.yml
examples/python/rlm/src/rlm/: __init__.py  repl.py
sdk/examples/anything_agent/: .gitignore  GUIDANCE.md  PLAN.md  SUMMARY.md  anything_agent.db  pyproject.toml  run.sh
sdk/examples/anything_agent/config/: profiles.yml
sdk/examples/anything_agent/src/anything_agent/: __init__.py  context.py  execution.py  hooks.py  invoker.py  main.py  observer.py  runner.py
sdk/examples/character_card/python/: pyproject.toml  run.sh
sdk/examples/coding_agent/python/: pyproject.toml  run.sh  test.sh
sdk/examples/coding_agent/python/tests/: __init__.py
sdk/examples/dynamic_agent/python/: README.md  pyproject.toml  run.sh
sdk/examples/error_handling/python/: pyproject.toml  run.sh
sdk/examples/helloworld/python/: README.md  pyproject.toml  run.sh
sdk/examples/human-in-the-loop/python/: README.md  pyproject.toml  run.sh
sdk/examples/human-in-the-loop/python-prompt-toolkit/: README.md  pyproject.toml  run.sh
sdk/examples/mcp-box-template/: .gitignore  README.md  pyproject.toml
sdk/examples/mcp-box-template/examples/: box_config.json  demo.py  eval_tasks.json
sdk/examples/mcp-box-template/mcp_box/: __init__.py
sdk/examples/mcp-box-template/mcp_box/pipelines/: __init__.py  abstract.py  builder.py  cluster.py  consolidate.py
sdk/examples/mcp-box-template/mcp_box/runtime/: __init__.py  student.py
sdk/examples/mcp-box-template/mcp_box/schemas/: __init__.py  json_schema.py  mcp_box.py
sdk/examples/mcp-box-template/mcp_box/sqlite/: __init__.py  persistence.py
sdk/examples/mcp-box-template/mcp_box/tools/: __init__.py  file_ops.py  registry.py  testing.py
sdk/examples/mcp-box-template/scripts/: build_box.py  eval_box.py  run_student.py
sdk/examples/mcp-box-template/sqlite/: .gitkeep
sdk/examples/parallelism/python/: pyproject.toml  run.sh
sdk/examples/support_triage_json/python/: README.md  pyproject.toml  run.sh
sdk/examples/writer_critic/python/: README.md  pyproject.toml  run.sh
sdk/python/: MACHINES.md  README.md  pyproject.toml  release.sh
sdk/python/examples/: README.md  UPGRADE_TO_0.7.0.md
sdk/python/examples/character_card/: README.md  run.sh
sdk/python/examples/character_card/config/: machine.yml  profiles.yml  responder.yml  user_agent.yml
sdk/python/examples/dynamic_agent/: README.md  run.sh
sdk/python/examples/dynamic_agent/config/: generator.yml  machine.yml  profiles.yml  supervisor.yml
sdk/python/examples/error_handling/: run.sh
sdk/python/examples/error_handling/config/: cleanup.yml  machine.yml  worker.yml
sdk/python/examples/gepa_self_optimizer/: main.py  run.sh  smoketest.sh
sdk/python/examples/gepa_self_optimizer/docs/: GEPA_COMPLIANCE_IMPROVEMENTS.md  PLAN.md
sdk/python/examples/gepa_self_optimizer/src/: data_generator.py  evaluator.py  optimizer.py  prompt_evolver.py  utils.py
sdk/python/examples/helloworld/: pyproject.toml  run.sh
sdk/python/examples/helloworld/config/: agent.yml  machine.yml
sdk/python/examples/human_in_loop/: run.sh
sdk/python/examples/human_in_loop/config/: drafter.yml  machine.yml
sdk/python/examples/lifecycle_management/: README.md  main.py
sdk/python/examples/lifecycle_management/config/: machine.yml
sdk/python/examples/mcp_exa/: .gitignore  README.md  pyproject.toml  run.sh
sdk/python/examples/mcp_exa/config/: agent.yml
sdk/python/examples/mdap/: calibrate.sh  pyproject.toml  run.sh
sdk/python/examples/mdap/config/: hanoi.yml  machine.yml  profiles.yml
sdk/python/examples/multi_paper_synthesizer/: .gitignore  README.md  pyproject.toml  run.sh
sdk/python/examples/multi_paper_synthesizer/config/: comparator.yml  critic.yml  formatter.yml  gap_finder.yml  machine.yml  profiles.yml  synthesizer.yml
sdk/python/examples/parallelism/: .gitignore  README.md  run.sh
sdk/python/examples/parallelism/config/: machine.yml  (+1 more)
sdk/python/examples/research_paper_analysis/: .gitignore  README.md  pyproject.toml  run.sh
sdk/python/examples/rlm/: README.md  run.sh
sdk/python/examples/search_refiner/: README.md  pyproject.toml  run.sh
sdk/python/examples/story_writer/: README.md  pyproject.toml  run.sh
sdk/python/examples/support_triage_json/: README.md  run.sh
sdk/python/examples/writer_critic/: README.md  run.sh
sdk/python/flatagents/: MACHINES.md  README.md  __init__.py  actions.py  baseagent.py  distributed_hooks.py  execution.py  flatagent.py  flatmachine.py  hooks.py  monitoring.py  persistence.py  profiles.py  pyproject.toml  run.py  utils.py  validation.py
sdk/python/flatagents/assets/: flatagent.d.ts  flatagent.schema.json  flatagent.slim.d.ts  flatagents-runtime.d.ts  flatagents-runtime.schema.json  flatagents-runtime.slim.d.ts  flatmachine.d.ts  flatmachine.schema.json  flatmachine.slim.d.ts  profiles.d.ts  profiles.schema.json  profiles.slim.d.ts
sdk/python/flatagents/expressions/: __init__.py  cel.py
sdk/python/flatagents/flatagents/: __init__.py  actions.py  backends.py  baseagent.py  distributed.py  execution.py  flatagent.py  flatmachine.py  hooks.py  locking.py  monitoring.py  profiles.py  run.py  utils.py  validation.py
sdk/python/flatmachines/: MACHINES.md  README.md  pyproject.toml
sdk/python/flatmachines/flatmachines/: __init__.py  actions.py  agents.py  distributed_hooks.py  execution.py  flatmachine.py  hooks.py  lifecycle.py  monitoring.py  run.py  utils.py  validation.py
sdk/python/tests/integration/: README.md  pyproject.toml  run.sh
sdk/python/tests/unit/: pyproject.toml  run.sh  test_helloworld_machine.py  test_profiles_discovery.py  test_type_preservation.py
(+634 files in other folders)
