[project]
name = "rlm-example"
version = "0.1.0"
description = "Recursive Language Model (RLM) example using FlatAgents - handles arbitrarily long contexts via REPL exploration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flatagents[litellm]",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
rlm-demo = "rlm.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rlm"]
