[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flatmachines"
version = "0.10.0"
description = "State machine orchestration for agent workflows."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { email = "memgrafter@gmail.com" }
]
keywords = ["llm", "agents", "workflow", "state-machine", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pyyaml", "jinja2", "aiofiles", "httpx"]

[project.optional-dependencies]
cel = ["cel-python"]
validation = ["jsonschema>=4.0"]
metrics = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
flatagents = ["flatagents>=0.10.0"]
smolagents = ["smolagents"]
# Local development extras
local = [
    "cel-python",
    "jsonschema>=4.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "flatagents>=0.10.0",
    "smolagents",
]
# Alias for local
all = [
    "cel-python",
    "jsonschema>=4.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "flatagents>=0.10.0",
    "smolagents",
]

[project.urls]
Homepage = "https://github.com/memgrafter/flatagents"
Repository = "https://github.com/memgrafter/flatagents"
Issues = "https://github.com/memgrafter/flatagents/issues"

[tool.hatch.build.targets.wheel]
packages = ["flatmachines"]
artifacts = [
    "flatmachines/assets/*.d.ts",
    "flatmachines/assets/*.json",
    "flatmachines/adapters/*.mjs",
]
