[project]
name = "character_card"
version = "0.1.0"
description = "Character Card V2 chat demo for FlatAgents"
dependencies = ["flatagents[litellm]"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
character-card-demo = "character_card.main:main"
