[project]
name = "coding-agent"
version = "0.1.0"
description = "AI coding agent with human-in-the-loop review for FlatMachines"
dependencies = ["flatmachines[flatagents]", "flatagents[litellm]"]
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
coding-agent = "coding_agent.main:main"
