[project]
name = "dynamic-agent"
version = "0.1.0"
description = "Dynamic agent generation with pre-execution supervision"
requires-python = ">=3.10"
dependencies = [
    "flatagents>=0.2.2",
    "litellm",
    "nest-asyncio",
]

[project.scripts]
dynamic-agent = "dynamic_agent.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dynamic_agent"]
