[project]
name = "error_handling"
version = "0.1.0"
description = "Error handling demo with cleanup agent."
dependencies = ["flatagents[litellm]"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
error-handling-demo = "error_handling.main:main"
