[project]
name = "flatagent_helloworld"
version = "0.1.0"
description = "'Hello, World!' demo for FlatMachine."
dependencies = ["flatmachines[flatagents,metrics]", "flatagents[litellm,metrics]"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
helloworld-demo = "flatagent_helloworld.main:main"
