[project]
name = "human_in_loop_prompt_toolkit"
version = "0.1.0"
description = "Human-in-the-Loop demo for FlatAgents using prompt_toolkit"
dependencies = [
    "flatagents[litellm]",
    "prompt_toolkit>=3.0.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/human_in_loop"]

[project.scripts]
human-in-loop-prompt-toolkit-demo = "human_in_loop.main:main"
