[project]
name = "human_in_loop"
version = "0.1.0"
description = "Human-in-the-Loop demo for FlatAgents"
dependencies = ["flatagents[litellm]"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
human-in-loop-demo = "human_in_loop.main:main"
