[project]
name = "parallelism"
version = "0.1.0"
description = "Parallel machine execution demo for FlatAgents"
dependencies = ["flatagents[litellm]"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
parallelism-demo = "parallelism.main:main"