[project]
name = "support_triage_json"
version = "0.1.0"
description = "Support triage with nested FlatMachine (JSON configs)"
dependencies = ["flatagents[litellm]"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
support-triage-json-demo = "support_triage_json.main:main"
