[project]
name = "mcp_exa"
version = "0.1.0"
description = "MCP Exa demo for FlatAgent - web search with MCP tools."
dependencies = ["flatagents[litellm]", "aisuite[mcp]"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
mcp-exa-demo = "mcp_exa.main:main"
