[project]
name = "flatagent-search-refiner"
version = "0.1.0"
description = "2-Agent FlatAgent workflow demonstrating web search and content refinement"
requires-python = ">=3.10"
dependencies = [
    "flatagents[aisuite]",
    "aisuite[mcp]",
    "cerebras-cloud-sdk",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/search_refiner"]

[project.scripts]
search-refiner = "search_refiner.main:main"
