[project]
name = "story_writer"
version = "0.1.0"
description = "Multi-chapter story writing with HSM and checkpoint/resume for FlatAgents"
dependencies = ["flatagents[litellm]"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
story-writer-demo = "story_writer.main:main"
