[project]
name = "flatagents_unit_tests"
version = "0.1.0"
description = "Unit tests for FlatAgents core functionality"
dependencies = ["flatagents[litellm]", "pytest", "pytest-asyncio"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
