[project]
name = "flatagents_persistence_tests"
version = "0.1.0"
description = "Integration tests for FlatMachine persistence features"
dependencies = ["flatagents[litellm]", "pytest", "pytest-asyncio"]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
